# media

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  language_detector.py  media_fetcher.py  query_generator.py  ranker.py
app/api/: __init__.py  admin.py  dependencies.py  error_handlers.py  middleware.py  routes.py
app/config/: __init__.py  settings.py
app/db/: __init__.py  base.py  seed.py  session.py
app/db/models/: __init__.py  prompt.py
app/models/: __init__.py  media.py  prompt.py  query.py  requests.py  responses.py
app/multilingual/: __init__.py  detector.py  prompts.py  translation.py
app/pipelines/: __init__.py  analyze.py  batch.py  search.py
app/ranking/: __init__.py  deduplication.py  scorer.py
app/services/: __init__.py  base_client.py  cache.py  openai_client.py  pexels.py  pixabay.py  prompt_service.py
app/static/: index.html
app/static/admin/: index.html
app/static/css/: admin.css  style.css
app/static/js/: admin.js  app.js
app/utils/: __init__.py  circuit_breaker.py  exceptions.py  hashing.py  logging.py  rate_limiter.py
docs/: todo.txt
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_agents.py  test_deduplication.py  test_language_detector.py  test_scorer.py
